# rss_reader

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Makefile  README.md  base.env  pyproject.toml  setup.cfg
docker/: Dockerfile  Dockerfile.APIService  Dockerfile.Scrapper  docker-compose.yaml  run.sh
docs/: postman_collection.json
src/api/: conftest.py  junit.xml  pytest.ini  utils.py
src/api/api/: asgi.py  celery.py  urls.py
src/api/api/settings/: __init__.py  base.py  celery.py  drf.py
src/api/rss/: admin.py  models.py  rss_parser.py  serializers.py  tasks.py  urls.py
src/api/rss/management/commands/: add_default_rss.py
src/api/rss/migrations/: 0001_initial.py  0002_auto_20221111_1230.py  0002_remove_userrssitemmodel_user_and_more.py  0002_rssmodel_unavailable.py  0003_remove_rssmodel_copyright_and_more.py  0003_rename_users_rssitemmodel_user_rss_and_more.py  0004_alter_rssitemmodel_options_and_more.py  0004_remove_rssitemmodel_id_alter_rssitemmodel_guid_and_more.py  0005_rssmodel_category_rssmodel_copyright_and_more.py
src/api/rss/tests/: conftest.py  factory.py  test_rss_item_view.py  test_rss_view.py  test_tasks.py
src/api/rss/views/: __init__.py  rss_items_views.py  rss_views.py
src/api/utils/: __init__.py  tests.py
src/scrapper/: __init__.py  rss_scrapper.py
src/scrapper/parsers/: algemeen.py  base.py  cnn.py  tweakers.py
